--- a/app.json
+++ b/app.json
@@ -4,24 +4,23 @@
     "slug": "scale-builder",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./img/logos.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./img/logos.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#343B48"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./img/logos.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ghostline.scalebuilder"
     },
     "web": {
       "favicon": "./assets/favicon.png"
