--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ npm-debug.*
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
+.env.local
+C:\Users\Diogo\Documents\native\scale-builder\src\firebase\Auth.tsx
 
 # macOS
 .DS_Store
