--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
+    "fs": "^0.0.1-security",
     "git": "^0.1.5",
     "git-all": "^0.0.3",
     "nativewind": "^2.0.11",
@@ -25,11 +28,12 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.4",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.76.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
