--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "tailwindcss": "^3.2.7",
