--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
     "dotenv": "^16.0.3",
     "expo": "~48.0.5",
+    "expo-camera": "~13.2.1",
+    "expo-document-picker": "~11.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.17.2",
+    "firebase": "^9.18.0",
     "fs": "^0.0.1-security",
     "git": "^0.1.5",
     "git-all": "^0.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.43.5",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^5.3.1",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
