--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "react-native": "0.71.4",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-modalize": "^2.1.1",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
